# miis-final-project

./: README.md
Docker/: DockerFile  run_container.sh  run_mac_con.sh
ego_vehicle_fov/: CMakeLists.txt  package.xml
ego_vehicle_fov/src/: grid_cells_in_fov.cpp
multiple_turtlebot3_sim/: CMakeLists.txt  README.md  package.xml
multiple_turtlebot3_sim/include/: PoseTFPublisher.h
multiple_turtlebot3_sim/launch/: gazebo_multi_robot_bringup_launch.py  multi_robot_path_tracker.launch.py  multiple_robot_state_publisher.launch.py  robot_state_publisher.launch.py  slam_toolbox.launch.py  spawn_multiple_turtlebot3.launch.py  spawn_turtlebot3.launch.py  turtlebot3_house.launch.py  turtlebot3_multiple.launch.py  turtlebot3_world.launch.py
multiple_turtlebot3_sim/map/: my_map.pgm  my_map.yaml
multiple_turtlebot3_sim/models/ground_plane/: model.config  model.sdf
multiple_turtlebot3_sim/models/turtlebot3_burger/: model.sdf
multiple_turtlebot3_sim/models/turtlebot3_burger_static/: model.sdf
multiple_turtlebot3_sim/models/turtlebot3_world/: model.sdf
multiple_turtlebot3_sim/params/: slam_toolbox.yaml  turtlebot3_burger_bridge.yaml
multiple_turtlebot3_sim/rviz/: main_robot.rviz  multiple_robot.rviz  multiple_robot1.rviz  project_rviz2.config.rviz  robot1.rviz  robot2.rviz
multiple_turtlebot3_sim/src/: MultiRobotSimulationMain.cpp  PoseTFPublisher.cpp  tf_republisher.cpp
multiple_turtlebot3_sim/urdf/: turtlebot3_burger.urdf  turtlebot3_burger.urdf.xacro  turtlebot3_burger_cam.urdf  turtlebot3_waffle.urdf  turtlebot3_waffle_pi.urdf
robot_path_tracker/: package.xml  setup.cfg  setup.py
robot_path_tracker/config/: robot1_static_path.yml  robot2_static_path.yml  robot3_static_path.yml
robot_path_tracker/robot_path_tracker/: path_tracker_node.py
